--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,15 @@
 @import "font-awesome";
 
 body {
-  background: #e2ebf3;
+  width: 400px;
+  margin: auto;
+  background: #DA6CDF;
+  text-align: center;
+  ul {
+    list-style: none;
+    margin-top: 50px;
+    li {
+      font-family: cursive;
+    }
+  }
 }
